Control de tiempo y memoria + arreglos finales